# ml_test

./: .gitignore  Requirements_GPT5.docx  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
configs/: config.yaml  hyperparams.yaml  inference_config.yaml  inference_hyperparams.yaml
data/: README.md
reports/: backtest_120min_event_all_actions.csv  backtest_120min_event_all_summary.json  backtest_1min_event_actions.csv  backtest_1min_event_all_actions.csv  backtest_1min_event_all_summary.json  backtest_1min_event_holdout_actions.csv  backtest_1min_event_holdout_summary.json  backtest_1min_event_summary.json  backtest_1min_event_train_actions.csv  backtest_1min_event_train_summary.json  backtest_240min_event_all_actions.csv  backtest_240min_event_all_summary.json  backtest_30min_event_all_actions.csv  backtest_30min_event_all_summary.json  backtest_60min_event_all_actions.csv  backtest_60min_event_all_summary.json  decile_lift_120min.csv  decile_lift_15min.csv  decile_lift_240min.csv  decile_lift_30min.csv  decile_lift_60min.csv  lgbm_feature_stability.csv  lgbm_feature_stability.json  per_fold_metrics_120min.csv  per_fold_metrics_15min.csv  per_fold_metrics_240min.csv  per_fold_metrics_30min.csv  per_fold_metrics_60min.csv  threshold_1min_best.json  threshold_1min_grid_train.csv  threshold_1min_top10_train.csv  threshold_240min_best.json  threshold_240min_top10_train.csv  threshold_60min_best.json  threshold_60min_top10_train.csv  train_report_120min.json  train_report_15min.json  (+4 more)
(+61 files in other folders)
