[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ml-signals"
version = "0.2.0"
description = "Leak-proof ML trading signals on minute-bar crypto"
authors = [{name="Your Name"}]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
